--- a/src/markdown/mas/issues_pilootmeetnet.Rmd
+++ b/src/markdown/mas/issues_pilootmeetnet.Rmd
@@ -28,12 +28,17 @@ library(sf)
 
 # Inlezen data
 
+We lezen de KML-file in. In de attributentabel staan issues waarmee we moeten rekening houden in volgende steekproeftrekkingen. Het inlezen van deze data is niet triviaal. Zie:  
+https://github.com/r-spatial/sf/issues/499  
+https://gis.stackexchange.com/questions/301336/extracting-non-spatial-data-from-imported-kml-file-using-r  
+
 ```{r}
 # Create data path
 data_path <- here("data", "mas")
 
 # Read data
-issue_list_raw <- st_read(paste(data_path, "MAS punten 2022 per teller.kml", sep = "/"))
+issue_list_raw <- st_read(paste(data_path, "MAS punten 2022 per teller.kml", 
+                                sep = "/"))
 
 # Parse to table
 issue_list <- issue_list_raw %>%
@@ -59,6 +64,5 @@ issue_list <- issue_list_raw %>%
            sep = "(<br>)+") %>%
   mutate(across(beschrijving:wie, ~str_extract(., "(?<=:\\s).+")))
 ```
-
 
 
