--- a/src/markdown/mas/issues_pilootmeetnet.Rmd
+++ b/src/markdown/mas/issues_pilootmeetnet.Rmd
@@ -46,8 +46,7 @@ kml_file <- paste(data_path, "MAS punten 2022 per teller.kml", sep = "/")
 #         if no layer is given, the first layer is loaded
 
 read_KML <- function(dsn, layer = NULL) {
-  require(sf)
-  require(tidyverse)
+  require(c(sf, stringr, dplyr))
   
   # Error handling
   ## File needs to exist
